--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "expo": "~52.0.25",
+    "expo-image": "^2.0.4",
+    "expo-image-picker": "^16.0.4",
     "react": "18.3.1",
     "react-native": "0.76.6"
   },
